Resolved little bug on mobile phones with Wazala widget.

--- a/app/assets/stylesheets/wazala_widget_custom.css.scss
+++ b/app/assets/stylesheets/wazala_widget_custom.css.scss
@@ -1,6 +1,8 @@
-#wazala_tab_w {
-  background-image: url('wazala_tab2.png') !important;
-  -webkit-transition: margin 0.5s ease-in; 
-  -moz-transition:    margin 0.5s ease-in;
-  -o-transition:      margin 0.5s ease-in;
+@media (min-width: 768px) {
+  #wazala_tab_w {
+    background-image: url('wazala_tab2.png') !important;
+    -webkit-transition: margin 0.5s ease-in; 
+    -moz-transition:    margin 0.5s ease-in;
+    -o-transition:      margin 0.5s ease-in;
+  }  
 }
